2015-03-03  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/object_overflow5.adb: New test.

2015-03-03  Martin Liska  <mliska@suse.cz>

	PR ipa/65287
	* gcc.dg/ipa/pr65287.c: New test.

2015-03-03  Martin Jambor  <mjambor@suse.cz>
            Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/pack12.ads: New test.

2015-03-03  Martin Liska  <mliska@suse.cz>

	* gcc.dg/ipa/PR65282.c: New test.

2015-03-13  Jeff Law  <law@redhat.com>

	PR tree-optimization/65241
	* gcc.c-torture/compile/pr65241.c: New test.

2015-03-03  Georg-Johann Lay  <avr@gjlay.de>

	PR target/64331
	* gcc.target/avr/torture/pr64331.c: New test.

2015-03-03  Martin Liska  <mliska@suse.cz>
	    Jan Hubicka   <hubicka@ucw.cz>

	* g++.dg/ipa/pr65263.C: New test.

2015-03-02  Jan Hubicka   <hubicka@ucw.cz>

	PR ipa/65130
	* gcc.dg/lto/pr65130_0.c: New testcase.
	* gcc.dg/lto/pr65130_1.c: New testcase.

2015-03-02  Jan Hubicka   <hubicka@ucw.cz>

	PR ipa/64988
	* g++.dg/torture/pr64988.C: New testcase.

2015-03-02  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_atomic_6.f90: New.

2015-03-02  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR target/65184
	* gcc.target/i386/pr65184.c: New.

2015-03-02  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR target/65183
	* gcc.target/i386/pr65183.c: New.

2015-02-28  Martin Liska  <mliska@suse.cz>
	    Jan Hubicka   <hubicka@ucw.cz>

	* gcc.dg/ipa/ipa-icf-35.c: New test.
	* gcc.dg/ipa/ipa-icf-36.c: New test.
	* gcc.dg/ipa/ipa-icf-37.c: New test.

2015-02-28  Martin Liska  <mliska@suse.cz>
	    Jan Hubicka   <hubicka@ucw.cz>

	PR ipa/65245
	* gcc.dg/ipa/ipa-icf-34.c: New test.

2015-03-01  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/61142
	* gcc.target/sh/sh/pr61142.c: New.

2015-03-01  Eric Botcazou  <ebotcazou@adacore.com>

	* g++.dg/other/dump-ada-spec-3.C: New test.

2015-03-01  Martin Liska  <mliska@suse.cz>

	* gcc.target/i386/stackalign/longlong-2.c: Omit ICF.
	* g++.dg/ipa/pr63595.C: Update expected results.
