@@ -1,3 +1,8 @@
+2015-03-04  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/64398
+	* g++.dg/cpp0x/decltype62.C: New.
+
 2015-03-03  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/object_overflow5.adb: New test.
